responsive menus, changements de quelques détails pratiques

--- a/Pages/page2.html
+++ b/Pages/page2.html
@@ -20,201 +20,201 @@
                 <h1>ohmyfood</h1>
             </div>
         </header>
-
-        <div class="pagesimg">
-            <img class="pagesimg__img pagesimg__img--position" src="../images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée">
-        </div>
-
-        <div class="pagesmenu">
-            <section class="pagesmenu__titre">
-                <h1>La note enchantée</h1>
-                <div class="container__heart">
-                    <div class="container__heart__1">
-                        <i class="fa-regular fa-heart fa-lg"></i>
-                    </div>
-                    <div class="container__heart__2">
-                        <i class="fa-solid fa-heart fa-lg"></i>
-                    </div>
-                </div>
-            </section>
-            <section class="menu">
-                <h2 class="menu__titre">ENTRÉES</h2>
-                <div class="menu__underline"></div>
-                <div class="menu__line menu__line--1">
-                    <article class="menu__line__txt">
-                        <h2 class="menu__line__txt__1">
-                            Ravioles de foie gras
-                        </h2>
-                        <p class="menu__line__txt__2">
-                            Accompagnés de leur crème à la truffe
-                        </p>
-                    </article>
-                    <p class="menu__line__price">
-                        25€
-                    </p>
-                    <div class="menu__line__validation">
-                        <i class="fa-sharp fa-solid fa-circle-check fa-lg menu__line__validation__icon"></i>
-                    </div>
-                </div>
-                <div class="menu__line menu__line--2">
-                    <article class="menu__line__txt">
-                        <h2 class="menu__line__txt__1">
-                            Caviar osciètre
-                        </h2>
-                        <p class="menu__line__txt__2">
-                            Sur blini à la farine
-                        </p>
-                    </article>
-                    <p class="menu__line__price">
-                        35€
-                    </p>
-                    <div class="menu__line__validation">
-                        <i class="fa-sharp fa-solid fa-circle-check fa-lg menu__line__validation__icon"></i>
-                    </div>
-                </div>
-                <div class="menu__line menu__line--3">
-                    <article class="menu__line__txt">
-                        <h2 class="menu__line__txt__1">
-                            Homard et espuma de potiron
-                        </h2>
-                        <p class="menu__line__txt__2">
-                            Mariné aux zests d'orange
-                        </p>
-                    </article>
-                    <p class="menu__line__price">
-                        20€
-                    </p>
-                    <div class="menu__line__validation">
-                        <i class="fa-sharp fa-solid fa-circle-check fa-lg menu__line__validation__icon"></i>
-                    </div>
-                </div>
-                <div class="menu__line menu__line--4">
-                    <article class="menu__line__txt">
-                        <h2 class="menu__line__txt__1">
-                            Foie gras de canard cuit entier
-                        </h2>
-                        <p class="menu__line__txt__2">
-                            Confiture de figue et pain toasté
-                        </p>
-                    </article>
-                    <p class="menu__line__price">
-                        35€
-                    </p>
-                    <div class="menu__line__validation">
-                        <i class="fa-sharp fa-solid fa-circle-check fa-lg menu__line__validation__icon"></i>
-                    </div>
-                </div>
-            </section>
-            <section class="menu">
-                <h2 class="menu__titre">PLATS</h2>
-                <div class="menu__underline"></div>
-                <div class="menu__line menu__line--5">
-                    <article class="menu__line__txt">
-                        <h2 class="menu__line__txt__1">
-                            Noix de coquille Saint-Jacques
-                        </h2>
-                        <p class="menu__line__txt__2">
-                            Sur lit de purée de céleri-rave
-                        </p>
-                    </article>
-                    <p class="menu__line__price">
-                        40€
-                    </p>
-                    <div class="menu__line__validation">
-                        <i class="fa-sharp fa-solid fa-circle-check fa-lg menu__line__validation__icon"></i>
-                    </div>
-                </div>
-                <div class="menu__line menu__line--6">
-                    <article class="menu__line__txt">
-                        <h2 class="menu__line__txt__1">
-                            Langoustine poêlée
-                        </h2>
-                        <p class="menu__line__txt__2">
-                            Purée de patate douce
-                        </p>
-                    </article>
-                    <p class="menu__line__price">
-                        35€
-                    </p>
-                    <div class="menu__line__validation">
-                        <i class="fa-sharp fa-solid fa-circle-check fa-lg menu__line__validation__icon"></i>
-                    </div>
-                </div>
-                <div class="menu__line menu__line--7">
-                    <article class="menu__line__txt">
-                        <h2 class="menu__line__txt__1">
-                            Mijoté de queue de boeuf
-                        </h2>
-                        <p class="menu__line__txt__2">
-                            Et riz sauvage aux zests de citron
-                        </p>
-                    </article>
-                    <p class="menu__line__price">
-                        44€
-                    </p>
-                    <div class="menu__line__validation">
-                        <i class="fa-sharp fa-solid fa-circle-check fa-lg menu__line__validation__icon"></i>
-                    </div>
-                </div>
-            </section>
-            <section class="menu">
-                <h2 class="menu__titre">DESSERTS</h2>
-                <div class="menu__underline"></div>
-                <div class="menu__line menu__line--8">
-                    <article class="menu__line__txt">
-                        <h2 class="menu__line__txt__1">
-                            Macaron noisette et chocolat
-                        </h2>
-                        <p class="menu__line__txt__2">
-                            Glace au caramel et sel de Guérande
-                        </p>
-                    </article>
-                    <p class="menu__line__price">
-                        18€
-                    </p>
-                    <div class="menu__line__validation">
-                        <i class="fa-sharp fa-solid fa-circle-check fa-lg menu__line__validation__icon"></i>
-                    </div>
-                </div>
-                <div class="menu__line menu__line--9">
-                    <article class="menu__line__txt">
-                        <h2 class="menu__line__txt__1">
-                            Baba au rhum revisité
-                        </h2>
-                        <p class="menu__line__txt__2">
-                            Avec son coulis de citron
-                        </p>
-                    </article>
-                    <p class="menu__line__price">
-                        22€
-                    </p>
-                    <div class="menu__line__validation">
-                        <i class="fa-sharp fa-solid fa-circle-check fa-lg menu__line__validation__icon"></i>
-                    </div>
-                </div>
-                <div class="menu__line menu__line--10">
-                    <article class="menu__line__txt">
-                        <h2 class="menu__line__txt__1">
-                            Tarte au citron meringuée
-                        </h2>
-                        <p class="menu__line__txt__2">
-                            Destructurée
-                        </p>
-                    </article>
-                    <p class="menu__line__price">
-                        23€
-                    </p>
-                    <div class="menu__line__validation">
-                        <i class="fa-sharp fa-solid fa-circle-check fa-lg menu__line__validation__icon"></i>
-                    </div>
-                </div>
-            </section>
-            <div class="bouton">
-                <button class="btn">Commander</button>
+        
+        <div class="container">
+            <div class="pagesimg">
+                <img class="pagesimg__img pagesimg__img--position" src="../images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée">
             </div>
         </div>
 
-
+        <div class="container">
+            <div class="pagesmenu">
+                <section class="pagesmenu__titre">
+                    <h1>La note enchantée</h1>
+                    <div class="container__heart">
+                        <div class="container__heart__1">
+                            <i class="fa-regular fa-heart fa-lg"></i>
+                        </div>
+                        <div class="container__heart__2">
+                            <i class="fa-solid fa-heart fa-lg"></i>
+                        </div>
+                    </div>
+                </section>
+                <section class="menu">
+                    <h2 class="menu__titre">ENTRÉES</h2>
+                    <div class="menu__line menu__line--1">
+                        <article class="menu__line__txt">
+                            <h2 class="menu__line__txt__1">
+                                Ravioles de foie gras
+                            </h2>
+                            <p class="menu__line__txt__2">
+                                Accompagnés de leur crème à la truffe
+                            </p>
+                        </article>
+                        <p class="menu__line__price">
+                            25€
+                        </p>
+                        <div class="menu__line__validation">
+                            <i class="fa-sharp fa-solid fa-circle-check fa-lg menu__line__validation__icon"></i>
+                        </div>
+                    </div>
+                    <div class="menu__line menu__line--2">
+                        <article class="menu__line__txt">
+                            <h2 class="menu__line__txt__1">
+                                Caviar osciètre
+                            </h2>
+                            <p class="menu__line__txt__2">
+                                Sur blini à la farine
+                            </p>
+                        </article>
+                        <p class="menu__line__price">
+                            35€
+                        </p>
+                        <div class="menu__line__validation">
+                            <i class="fa-sharp fa-solid fa-circle-check fa-lg menu__line__validation__icon"></i>
+                        </div>
+                    </div>
+                    <div class="menu__line menu__line--3">
+                        <article class="menu__line__txt">
+                            <h2 class="menu__line__txt__1">
+                                Homard et espuma de potiron
+                            </h2>
+                            <p class="menu__line__txt__2">
+                                Mariné aux zests d'orange
+                            </p>
+                        </article>
+                        <p class="menu__line__price">
+                            20€
+                        </p>
+                        <div class="menu__line__validation">
+                            <i class="fa-sharp fa-solid fa-circle-check fa-lg menu__line__validation__icon"></i>
+                        </div>
+                    </div>
+                    <div class="menu__line menu__line--4">
+                        <article class="menu__line__txt">
+                            <h2 class="menu__line__txt__1">
+                                Foie gras de canard cuit entier
+                            </h2>
+                            <p class="menu__line__txt__2">
+                                Confiture de figue et pain toasté
+                            </p>
+                        </article>
+                        <p class="menu__line__price">
+                            35€
+                        </p>
+                        <div class="menu__line__validation">
+                            <i class="fa-sharp fa-solid fa-circle-check fa-lg menu__line__validation__icon"></i>
+                        </div>
+                    </div>
+                </section>
+                <section class="menu">
+                    <h2 class="menu__titre">PLATS</h2>
+                    <div class="menu__line menu__line--5">
+                        <article class="menu__line__txt">
+                            <h2 class="menu__line__txt__1">
+                                Noix de coquille Saint-Jacques
+                            </h2>
+                            <p class="menu__line__txt__2">
+                                Sur lit de purée de céleri-rave
+                            </p>
+                        </article>
+                        <p class="menu__line__price">
+                            40€
+                        </p>
+                        <div class="menu__line__validation">
+                            <i class="fa-sharp fa-solid fa-circle-check fa-lg menu__line__validation__icon"></i>
+                        </div>
+                    </div>
+                    <div class="menu__line menu__line--6">
+                        <article class="menu__line__txt">
+                            <h2 class="menu__line__txt__1">
+                                Langoustine poêlée
+                            </h2>
+                            <p class="menu__line__txt__2">
+                                Purée de patate douce
+                            </p>
+                        </article>
+                        <p class="menu__line__price">
+                            35€
+                        </p>
+                        <div class="menu__line__validation">
+                            <i class="fa-sharp fa-solid fa-circle-check fa-lg menu__line__validation__icon"></i>
+                        </div>
+                    </div>
+                    <div class="menu__line menu__line--7">
+                        <article class="menu__line__txt">
+                            <h2 class="menu__line__txt__1">
+                                Mijoté de queue de boeuf
+                            </h2>
+                            <p class="menu__line__txt__2">
+                                Et riz sauvage aux zests de citron
+                            </p>
+                        </article>
+                        <p class="menu__line__price">
+                            44€
+                        </p>
+                        <div class="menu__line__validation">
+                            <i class="fa-sharp fa-solid fa-circle-check fa-lg menu__line__validation__icon"></i>
+                        </div>
+                    </div>
+                </section>
+                <section class="menu">
+                    <h2 class="menu__titre">DESSERTS</h2>
+                    <div class="menu__line menu__line--8">
+                        <article class="menu__line__txt">
+                            <h2 class="menu__line__txt__1">
+                                Macaron noisette et chocolat
+                            </h2>
+                            <p class="menu__line__txt__2">
+                                Glace au caramel et sel de Guérande
+                            </p>
+                        </article>
+                        <p class="menu__line__price">
+                            18€
+                        </p>
+                        <div class="menu__line__validation">
+                            <i class="fa-sharp fa-solid fa-circle-check fa-lg menu__line__validation__icon"></i>
+                        </div>
+                    </div>
+                    <div class="menu__line menu__line--9">
+                        <article class="menu__line__txt">
+                            <h2 class="menu__line__txt__1">
+                                Baba au rhum revisité
+                            </h2>
+                            <p class="menu__line__txt__2">
+                                Avec son coulis de citron
+                            </p>
+                        </article>
+                        <p class="menu__line__price">
+                            22€
+                        </p>
+                        <div class="menu__line__validation">
+                            <i class="fa-sharp fa-solid fa-circle-check fa-lg menu__line__validation__icon"></i>
+                        </div>
+                    </div>
+                    <div class="menu__line menu__line--10">
+                        <article class="menu__line__txt">
+                            <h2 class="menu__line__txt__1">
+                                Tarte au citron meringuée
+                            </h2>
+                            <p class="menu__line__txt__2">
+                                Destructurée
+                            </p>
+                        </article>
+                        <p class="menu__line__price">
+                            23€
+                        </p>
+                        <div class="menu__line__validation">
+                            <i class="fa-sharp fa-solid fa-circle-check fa-lg menu__line__validation__icon"></i>
+                        </div>
+                    </div>
+                </section>
+                <div class="bouton">
+                    <button class="btn">Commander</button>
+                </div>
+            </div>
+        </div>
+        
         <footer class="footer">
             <div class="container">
                 <h2 class="footer__logo">
