--- a/Pages/page3.html
+++ b/Pages/page3.html
@@ -20,185 +20,185 @@
                 <h1>ohmyfood</h1>
             </div>
         </header>
-
-        <div class="pagesimg">
-            <img class="pagesimg__img" src="../images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût">
-        </div>
-
-        <div class="pagesmenu">
-            <section class="pagesmenu__titre">
-                <h1>La palette du goût</h1>
-                <div class="container__heart">
-                    <div class="container__heart__1">
-                        <i class="fa-regular fa-heart fa-lg"></i>
-                    </div>
-                    <div class="container__heart__2">
-                        <i class="fa-solid fa-heart fa-lg"></i>
-                    </div>
-                </div>
-            </section>
-            <section class="menu">
-                <h2 class="menu__titre">ENTRÉES</h2>
-                <div class="menu__underline"></div>
-                <div class="menu__line menu__line--1">
-                    <article class="menu__line__txt">
-                        <h2 class="menu__line__txt__1">
-                            Fricassée d'escargot
-                        </h2>
-                        <p class="menu__line__txt__2">
-                            Au piment d'espelette
-                        </p>
-                    </article>
-                    <p class="menu__line__price">
-                        25€
-                    </p>
-                    <div class="menu__line__validation">
-                        <i class="fa-sharp fa-solid fa-circle-check fa-lg menu__line__validation__icon"></i>
-                    </div>
-                </div>
-                <div class="menu__line menu__line--2">
-                    <article class="menu__line__txt">
-                        <h2 class="menu__line__txt__1">
-                            Foie gras de canard mi-cuit
-                        </h2>
-                        <p class="menu__line__txt__2">
-                            Et ses copeaux de truffes noire
-                        </p>
-                    </article>
-                    <p class="menu__line__price">
-                        35€
-                    </p>
-                    <div class="menu__line__validation">
-                        <i class="fa-sharp fa-solid fa-circle-check fa-lg menu__line__validation__icon"></i>
-                    </div>
-                </div>
-                <div class="menu__line menu__line--3">
-                    <article class="menu__line__txt">
-                        <h2 class="menu__line__txt__1">
-                            Oeuf au plat
-                        </h2>
-                        <p class="menu__line__txt__2">
-                            Assaisonné à la truffe sur lit de caviar
-                        </p>
-                    </article>
-                    <p class="menu__line__price">
-                        20€
-                    </p>
-                    <div class="menu__line__validation">
-                        <i class="fa-sharp fa-solid fa-circle-check fa-lg menu__line__validation__icon"></i>
-                    </div>
-                </div>
-            </section>
-            <section class="menu">
-                <h2 class="menu__titre">PLATS</h2>
-                <div class="menu__underline"></div>
-                <div class="menu__line menu__line--4">
-                    <article class="menu__line__txt">
-                        <h2 class="menu__line__txt__1">
-                            Filet de boeuf aux herbes
-                        </h2>
-                        <p class="menu__line__txt__2">
-                            Accompagnées de sa ribambelle de légumes
-                        </p>
-                    </article>
-                    <p class="menu__line__price">
-                        40€
-                    </p>
-                    <div class="menu__line__validation">
-                        <i class="fa-sharp fa-solid fa-circle-check fa-lg menu__line__validation__icon"></i>
-                    </div>
-                </div>
-                <div class="menu__line menu__line--5">
-                    <article class="menu__line__txt">
-                        <h2 class="menu__line__txt__1">
-                            Parmentier de queue de boeuf
-                        </h2>
-                        <p class="menu__line__txt__2">
-                            À la truffe noire sur sa purée de panais
-                        </p>
-                    </article>
-                    <p class="menu__line__price">
-                        35€
-                    </p>
-                    <div class="menu__line__validation">
-                        <i class="fa-sharp fa-solid fa-circle-check fa-lg menu__line__validation__icon"></i>
-                    </div>
-                </div>
-                <div class="menu__line menu__line--6">
-                    <article class="menu__line__txt">
-                        <h2 class="menu__line__txt__1">
-                            Filet de Turbot
-                        </h2>
-                        <p class="menu__line__txt__2">
-                            Aux agrumes
-                        </p>
-                    </article>
-                    <p class="menu__line__price">
-                        44€
-                    </p>
-                    <div class="menu__line__validation">
-                        <i class="fa-sharp fa-solid fa-circle-check fa-lg menu__line__validation__icon"></i>
-                    </div>
-                </div>
-            </section>
-            <section class="menu">
-                <h2 class="menu__titre">DESSERTS</h2>
-                <div class="menu__underline"></div>
-                <div class="menu__line menu__line--7">
-                    <article class="menu__line__txt">
-                        <h2 class="menu__line__txt__1">
-                            Paris-Brest
-                        </h2>
-                        <p class="menu__line__txt__2">
-                            Revisité
-                        </p>
-                    </article>
-                    <p class="menu__line__price">
-                        18€
-                    </p>
-                    <div class="menu__line__validation">
-                        <i class="fa-sharp fa-solid fa-circle-check fa-lg menu__line__validation__icon"></i>
-                    </div>
-                </div>
-                <div class="menu__line menu__line--8">
-                    <article class="menu__line__txt">
-                        <h2 class="menu__line__txt__1">
-                            Macaron au chocolat d'exception
-                        </h2>
-                        <p class="menu__line__txt__2">
-                            Et glace à la vanille de Madagascar
-                        </p>
-                    </article>
-                    <p class="menu__line__price">
-                        22€
-                    </p>
-                    <div class="menu__line__validation">
-                        <i class="fa-sharp fa-solid fa-circle-check fa-lg menu__line__validation__icon"></i>
-                    </div>
-                </div>
-                <div class="menu__line menu__line--9">
-                    <article class="menu__line__txt">
-                        <h2 class="menu__line__txt__1">
-                            Mousse au chocolat
-                        </h2>
-                        <p class="menu__line__txt__2">
-                            Au piment d'espelette et à la truffe noire
-                        </p>
-                    </article>
-                    <p class="menu__line__price">
-                        23€
-                    </p>
-                    <div class="menu__line__validation">
-                        <i class="fa-sharp fa-solid fa-circle-check fa-lg menu__line__validation__icon"></i>
-                    </div>
-                </div>
-            </section>
-            <div class="bouton">
-                <button class="btn">Commander</button>
+        
+        <div class="container">
+            <div class="pagesimg">
+                <img class="pagesimg__img" src="../images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût">
             </div>
         </div>
 
-
+        <div class="container">
+            <div class="pagesmenu">
+                <section class="pagesmenu__titre">
+                    <h1>La palette du goût</h1>
+                    <div class="container__heart">
+                        <div class="container__heart__1">
+                            <i class="fa-regular fa-heart fa-lg"></i>
+                        </div>
+                        <div class="container__heart__2">
+                            <i class="fa-solid fa-heart fa-lg"></i>
+                        </div>
+                    </div>
+                </section>
+                <section class="menu">
+                    <h2 class="menu__titre">ENTRÉES</h2>
+                    <div class="menu__line menu__line--1">
+                        <article class="menu__line__txt">
+                            <h2 class="menu__line__txt__1">
+                                Fricassée d'escargot
+                            </h2>
+                            <p class="menu__line__txt__2">
+                                Au piment d'espelette
+                            </p>
+                        </article>
+                        <p class="menu__line__price">
+                            25€
+                        </p>
+                        <div class="menu__line__validation">
+                            <i class="fa-sharp fa-solid fa-circle-check fa-lg menu__line__validation__icon"></i>
+                        </div>
+                    </div>
+                    <div class="menu__line menu__line--2">
+                        <article class="menu__line__txt">
+                            <h2 class="menu__line__txt__1">
+                                Foie gras de canard mi-cuit
+                            </h2>
+                            <p class="menu__line__txt__2">
+                                Et ses copeaux de truffes noire
+                            </p>
+                        </article>
+                        <p class="menu__line__price">
+                            35€
+                        </p>
+                        <div class="menu__line__validation">
+                            <i class="fa-sharp fa-solid fa-circle-check fa-lg menu__line__validation__icon"></i>
+                        </div>
+                    </div>
+                    <div class="menu__line menu__line--3">
+                        <article class="menu__line__txt">
+                            <h2 class="menu__line__txt__1">
+                                Oeuf au plat
+                            </h2>
+                            <p class="menu__line__txt__2">
+                                Assaisonné à la truffe sur lit de caviar
+                            </p>
+                        </article>
+                        <p class="menu__line__price">
+                            20€
+                        </p>
+                        <div class="menu__line__validation">
+                            <i class="fa-sharp fa-solid fa-circle-check fa-lg menu__line__validation__icon"></i>
+                        </div>
+                    </div>
+                </section>
+                <section class="menu">
+                    <h2 class="menu__titre">PLATS</h2>
+                    <div class="menu__line menu__line--4">
+                        <article class="menu__line__txt">
+                            <h2 class="menu__line__txt__1">
+                                Filet de boeuf aux herbes
+                            </h2>
+                            <p class="menu__line__txt__2">
+                                Accompagnées de sa ribambelle de légumes
+                            </p>
+                        </article>
+                        <p class="menu__line__price">
+                            40€
+                        </p>
+                        <div class="menu__line__validation">
+                            <i class="fa-sharp fa-solid fa-circle-check fa-lg menu__line__validation__icon"></i>
+                        </div>
+                    </div>
+                    <div class="menu__line menu__line--5">
+                        <article class="menu__line__txt">
+                            <h2 class="menu__line__txt__1">
+                                Parmentier de queue de boeuf
+                            </h2>
+                            <p class="menu__line__txt__2">
+                                À la truffe noire sur sa purée de panais
+                            </p>
+                        </article>
+                        <p class="menu__line__price">
+                            35€
+                        </p>
+                        <div class="menu__line__validation">
+                            <i class="fa-sharp fa-solid fa-circle-check fa-lg menu__line__validation__icon"></i>
+                        </div>
+                    </div>
+                    <div class="menu__line menu__line--6">
+                        <article class="menu__line__txt">
+                            <h2 class="menu__line__txt__1">
+                                Filet de Turbot
+                            </h2>
+                            <p class="menu__line__txt__2">
+                                Aux agrumes
+                            </p>
+                        </article>
+                        <p class="menu__line__price">
+                            44€
+                        </p>
+                        <div class="menu__line__validation">
+                            <i class="fa-sharp fa-solid fa-circle-check fa-lg menu__line__validation__icon"></i>
+                        </div>
+                    </div>
+                </section>
+                <section class="menu">
+                    <h2 class="menu__titre">DESSERTS</h2>
+                    <div class="menu__line menu__line--7">
+                        <article class="menu__line__txt">
+                            <h2 class="menu__line__txt__1">
+                                Paris-Brest
+                            </h2>
+                            <p class="menu__line__txt__2">
+                                Revisité
+                            </p>
+                        </article>
+                        <p class="menu__line__price">
+                            18€
+                        </p>
+                        <div class="menu__line__validation">
+                            <i class="fa-sharp fa-solid fa-circle-check fa-lg menu__line__validation__icon"></i>
+                        </div>
+                    </div>
+                    <div class="menu__line menu__line--8">
+                        <article class="menu__line__txt">
+                            <h2 class="menu__line__txt__1">
+                                Macaron au chocolat d'exception
+                            </h2>
+                            <p class="menu__line__txt__2">
+                                Et glace à la vanille de Madagascar
+                            </p>
+                        </article>
+                        <p class="menu__line__price">
+                            22€
+                        </p>
+                        <div class="menu__line__validation">
+                            <i class="fa-sharp fa-solid fa-circle-check fa-lg menu__line__validation__icon"></i>
+                        </div>
+                    </div>
+                    <div class="menu__line menu__line--9">
+                        <article class="menu__line__txt">
+                            <h2 class="menu__line__txt__1">
+                                Mousse au chocolat
+                            </h2>
+                            <p class="menu__line__txt__2">
+                                Au piment d'espelette et à la truffe noire
+                            </p>
+                        </article>
+                        <p class="menu__line__price">
+                            23€
+                        </p>
+                        <div class="menu__line__validation">
+                            <i class="fa-sharp fa-solid fa-circle-check fa-lg menu__line__validation__icon"></i>
+                        </div>
+                    </div>
+                </section>
+                <div class="bouton">
+                    <button class="btn">Commander</button>
+                </div>
+            </div>
+        </div>
+        
         <footer class="footer">
             <div class="container">
                 <h2 class="footer__logo">
