--- a/Pages/page1.html
+++ b/Pages/page1.html
@@ -12,6 +12,7 @@
     </head>
 
     <body>
+        
         <header class="header">
             <a href="../index.html" class="header__return">
                 <i class="fa-solid fa-arrow-left fa-lg"></i>
@@ -21,183 +22,183 @@
             </div>
         </header>
 
-        <div class="pagesimg">
-            <img class="pagesimg__img" src="../images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="À la française">
-        </div>
-
-        <div class="pagesmenu">
-            <section class="pagesmenu__titre">
-                <h1>À la française</h1>
-                <div class="container__heart">
-                    <div class="container__heart__1">
-                        <i class="fa-regular fa-heart fa-lg"></i>
-                    </div>
-                    <div class="container__heart__2">
-                        <i class="fa-solid fa-heart fa-lg"></i>
-                    </div>
-                </div>
-            </section>
-            <section class="menu">
-                <h2 class="menu__titre">ENTRÉES</h2>
-                <div class="menu__underline"></div>
-                <div class="menu__line menu__line--1">
-                    <article class="menu__line__txt">
-                        <h2 class="menu__line__txt__1">
-                            Tartare de poulpe acidulé
-                        </h2>
-                        <p class="menu__line__txt__2">
-                            Aux zests d'orange
-                        </p>
-                    </article>
-                    <p class="menu__line__price">
-                        25€
-                    </p>
-                    <div class="menu__line__validation">
-                        <i class="fa-sharp fa-solid fa-circle-check fa-lg menu__line__validation__icon"></i>
-                    </div>
-                </div>
-                <div class="menu__line menu__line--2">
-                    <article class="menu__line__txt">
-                        <h2 class="menu__line__txt__1">
-                            Velouté de légumes d'antan
-                        </h2>
-                        <p class="menu__line__txt__2">
-                            Carotte, panais, topinambour
-                        </p>
-                    </article>
-                    <p class="menu__line__price">
-                        35€
-                    </p>
-                    <div class="menu__line__validation">
-                        <i class="fa-sharp fa-solid fa-circle-check fa-lg menu__line__validation__icon"></i>
-                    </div>
-                </div>
-                <div class="menu__line menu__line--3">
-                    <article class="menu__line__txt">
-                        <h2 class="menu__line__txt__1">
-                            Soupe à l'oignon
-                        </h2>
-                        <p class="menu__line__txt__2">
-                            Revisitée
-                        </p>
-                    </article>
-                    <p class="menu__line__price">
-                        20€
-                    </p>
-                    <div class="menu__line__validation">
-                        <i class="fa-sharp fa-solid fa-circle-check fa-lg menu__line__validation__icon"></i>
-                    </div>
-                </div>
-            </section>
-            <section class="menu">
-                <h2 class="menu__titre">PLATS</h2>
-                <div class="menu__underline"></div>
-                <div class="menu__line menu__line--4">
-                    <article class="menu__line__txt">
-                        <h2 class="menu__line__txt__1">
-                            Coquille Saint-Jacques
-                        </h2>
-                        <p class="menu__line__txt__2">
-                            Accompagnées d'une purée de panais
-                        </p>
-                    </article>
-                    <p class="menu__line__price">
-                        40€
-                    </p>
-                    <div class="menu__line__validation">
-                        <i class="fa-sharp fa-solid fa-circle-check fa-lg menu__line__validation__icon"></i>
-                    </div>
-                </div>
-                <div class="menu__line menu__line--5">
-                    <article class="menu__line__txt">
-                        <h2 class="menu__line__txt__1">
-                            Magret de canard
-                        </h2>
-                        <p class="menu__line__txt__2">
-                            Et parmentier de pommes de terres
-                        </p>
-                    </article>
-                    <p class="menu__line__price">
-                        35€
-                    </p>
-                    <div class="menu__line__validation">
-                        <i class="fa-sharp fa-solid fa-circle-check fa-lg menu__line__validation__icon"></i>
-                    </div>
-                </div>
-                <div class="menu__line menu__line--6">
-                    <article class="menu__line__txt">
-                        <h2 class="menu__line__txt__1">
-                            Pigeonneaux d'Ille-et-Vilaine
-                        </h2>
-                        <p class="menu__line__txt__2">
-                            Sur son lit de gnocchis aux légumes
-                        </p>
-                    </article>
-                    <p class="menu__line__price">
-                        44€
-                    </p>
-                    <div class="menu__line__validation">
-                        <i class="fa-sharp fa-solid fa-circle-check fa-lg menu__line__validation__icon"></i>
-                    </div>
-                </div>
-            </section>
-            <section class="menu">
-                <h2 class="menu__titre">DESSERTS</h2>
-                <div class="menu__underline"></div>
-                <div class="menu__line menu__line--7">
-                    <article class="menu__line__txt">
-                        <h2 class="menu__line__txt__1">
-                            Pétales de violettes glacés
-                        </h2>
-                        <p class="menu__line__txt__2">
-                            Et purée de noisettes
-                        </p>
-                    </article>
-                    <p class="menu__line__price">
-                        18€
-                    </p>
-                    <div class="menu__line__validation">
-                        <i class="fa-sharp fa-solid fa-circle-check fa-lg menu__line__validation__icon"></i>
-                    </div>
-                </div>
-                <div class="menu__line menu__line--8">
-                    <article class="menu__line__txt">
-                        <h2 class="menu__line__txt__1">
-                            Fondant au chocolat
-                        </h2>
-                        <p class="menu__line__txt__2">
-                            Revisité
-                        </p>
-                    </article>
-                    <p class="menu__line__price">
-                        22€
-                    </p>
-                    <div class="menu__line__validation">
-                        <i class="fa-sharp fa-solid fa-circle-check fa-lg menu__line__validation__icon"></i>
-                    </div>
-                </div>
-                <div class="menu__line menu__line--9">
-                    <article class="menu__line__txt">
-                        <h2 class="menu__line__txt__1">
-                            Millefeuille croustillant
-                        </h2>
-                        <p class="menu__line__txt__2">
-                            Myrtilles et pâte d'amande
-                        </p>
-                    </article>
-                    <p class="menu__line__price">
-                        23€
-                    </p>
-                    <div class="menu__line__validation">
-                        <i class="fa-sharp fa-solid fa-circle-check fa-lg menu__line__validation__icon"></i>
-                    </div>
-                </div>
-            </section>
-            <div class="bouton">
-                <button class="btn">Commander</button>
+        <div class="container">
+            <div class="pagesimg">
+                <img class="pagesimg__img" src="../images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="À la française">
             </div>
         </div>
 
+        <div class="container">
+            <div class="pagesmenu">
+                <section class="pagesmenu__titre">
+                    <h1>À la française</h1>
+                    <div class="container__heart">
+                        <div class="container__heart__1">
+                            <i class="fa-regular fa-heart fa-lg"></i>
+                        </div>
+                        <div class="container__heart__2">
+                            <i class="fa-solid fa-heart fa-lg"></i>
+                        </div>
+                    </div>
+                </section>
+                <section class="menu">
+                    <h2 class="menu__titre">ENTRÉES</h2>
+                    <div class="menu__line menu__line--1">
+                        <article class="menu__line__txt">
+                            <h2 class="menu__line__txt__1">
+                                Tartare de poulpe acidulé
+                            </h2>
+                            <p class="menu__line__txt__2">
+                                Aux zests d'orange
+                            </p>
+                        </article>
+                        <p class="menu__line__price">
+                            25€
+                        </p>
+                        <div class="menu__line__validation">
+                            <i class="fa-sharp fa-solid fa-circle-check fa-lg menu__line__validation__icon"></i>
+                        </div>
+                    </div>
+                    <div class="menu__line menu__line--2">
+                        <article class="menu__line__txt">
+                            <h2 class="menu__line__txt__1">
+                                Velouté de légumes d'antan
+                            </h2>
+                            <p class="menu__line__txt__2">
+                                Carotte, panais, topinambour
+                            </p>
+                        </article>
+                        <p class="menu__line__price">
+                            35€
+                        </p>
+                        <div class="menu__line__validation">
+                            <i class="fa-sharp fa-solid fa-circle-check fa-lg menu__line__validation__icon"></i>
+                        </div>
+                    </div>
+                    <div class="menu__line menu__line--3">
+                        <article class="menu__line__txt">
+                            <h2 class="menu__line__txt__1">
+                                Soupe à l'oignon
+                            </h2>
+                            <p class="menu__line__txt__2">
+                                Revisitée
+                            </p>
+                        </article>
+                        <p class="menu__line__price">
+                            20€
+                        </p>
+                        <div class="menu__line__validation">
+                            <i class="fa-sharp fa-solid fa-circle-check fa-lg menu__line__validation__icon"></i>
+                        </div>
+                    </div>
+                </section>
+                <section class="menu">
+                    <h2 class="menu__titre">PLATS</h2>
+                    <div class="menu__line menu__line--4">
+                        <article class="menu__line__txt">
+                            <h2 class="menu__line__txt__1">
+                                Coquille Saint-Jacques
+                            </h2>
+                            <p class="menu__line__txt__2">
+                                Accompagnées d'une purée de panais
+                            </p>
+                        </article>
+                        <p class="menu__line__price">
+                            40€
+                        </p>
+                        <div class="menu__line__validation">
+                            <i class="fa-sharp fa-solid fa-circle-check fa-lg menu__line__validation__icon"></i>
+                        </div>
+                    </div>
+                    <div class="menu__line menu__line--5">
+                        <article class="menu__line__txt">
+                            <h2 class="menu__line__txt__1">
+                                Magret de canard
+                            </h2>
+                            <p class="menu__line__txt__2">
+                                Et parmentier de pommes de terres
+                            </p>
+                        </article>
+                        <p class="menu__line__price">
+                            35€
+                        </p>
+                        <div class="menu__line__validation">
+                            <i class="fa-sharp fa-solid fa-circle-check fa-lg menu__line__validation__icon"></i>
+                        </div>
+                    </div>
+                    <div class="menu__line menu__line--6">
+                        <article class="menu__line__txt">
+                            <h2 class="menu__line__txt__1">
+                                Pigeonneaux d'Ille-et-Vilaine
+                            </h2>
+                            <p class="menu__line__txt__2">
+                                Sur son lit de gnocchis aux légumes
+                            </p>
+                        </article>
+                        <p class="menu__line__price">
+                            44€
+                        </p>
+                        <div class="menu__line__validation">
+                            <i class="fa-sharp fa-solid fa-circle-check fa-lg menu__line__validation__icon"></i>
+                        </div>
+                    </div>
+                </section>
+                <section class="menu">
+                    <h2 class="menu__titre">DESSERTS</h2>
+                    <div class="menu__line menu__line--7">
+                        <article class="menu__line__txt">
+                            <h2 class="menu__line__txt__1">
+                                Pétales de violettes glacés
+                            </h2>
+                            <p class="menu__line__txt__2">
+                                Et purée de noisettes
+                            </p>
+                        </article>
+                        <p class="menu__line__price">
+                            18€
+                        </p>
+                        <div class="menu__line__validation">
+                            <i class="fa-sharp fa-solid fa-circle-check fa-lg menu__line__validation__icon"></i>
+                        </div>
+                    </div>
+                    <div class="menu__line menu__line--8">
+                        <article class="menu__line__txt">
+                            <h2 class="menu__line__txt__1">
+                                Fondant au chocolat
+                            </h2>
+                            <p class="menu__line__txt__2">
+                                Revisité
+                            </p>
+                        </article>
+                        <p class="menu__line__price">
+                            22€
+                        </p>
+                        <div class="menu__line__validation">
+                            <i class="fa-sharp fa-solid fa-circle-check fa-lg menu__line__validation__icon"></i>
+                        </div>
+                    </div>
+                    <div class="menu__line menu__line--9">
+                        <article class="menu__line__txt">
+                            <h2 class="menu__line__txt__1">
+                                Millefeuille croustillant
+                            </h2>
+                            <p class="menu__line__txt__2">
+                                Myrtilles et pâte d'amande
+                            </p>
+                        </article>
+                        <p class="menu__line__price">
+                            23€
+                        </p>
+                        <div class="menu__line__validation">
+                            <i class="fa-sharp fa-solid fa-circle-check fa-lg menu__line__validation__icon"></i>
+                        </div>
+                    </div>
+                </section>
+                <div class="bouton">
+                    <button class="btn">Commander</button>
+                </div>
+            </div>
+        </div>
 
         <footer class="footer">
             <div class="container">
@@ -220,6 +221,6 @@
                 </ul>
             </div>
         </footer>
-
+        
         <script src="https://kit.fontawesome.com/0e4dff364e.js" crossorigin="anonymous"></script>
     </body>
