--- a/Pages/page4.html
+++ b/Pages/page4.html
@@ -20,185 +20,185 @@
                 <h1>ohmyfood</h1>
             </div>
         </header>
-
-        <div class="pagesimg">
-            <img class="pagesimg__img" src="../images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Le délice des sens">
-        </div>
-
-        <div class="pagesmenu">
-            <section class="pagesmenu__titre">
-                <h1>À la française</h1>
-                <div class="container__heart">
-                    <div class="container__heart__1">
-                        <i class="fa-regular fa-heart fa-lg"></i>
-                    </div>
-                    <div class="container__heart__2">
-                        <i class="fa-solid fa-heart fa-lg"></i>
-                    </div>
-                </div>
-            </section>
-            <section class="menu">
-                <h2 class="menu__titre">ENTRÉES</h2>
-                <div class="menu__underline"></div>
-                <div class="menu__line menu__line--1">
-                    <article class="menu__line__txt">
-                        <h2 class="menu__line__txt__1">
-                            Tartare de thon
-                        </h2>
-                        <p class="menu__line__txt__2">
-                            Assaisonné au yuzu
-                        </p>
-                    </article>
-                    <p class="menu__line__price">
-                        25€
-                    </p>
-                    <div class="menu__line__validation">
-                        <i class="fa-sharp fa-solid fa-circle-check fa-lg menu__line__validation__icon"></i>
-                    </div>
-                </div>
-                <div class="menu__line menu__line--2">
-                    <article class="menu__line__txt">
-                        <h2 class="menu__line__txt__1">
-                            Bouchée de homard croustillant
-                        </h2>
-                        <p class="menu__line__txt__2">
-                            Et sa farandole de petits légumes
-                        </p>
-                    </article>
-                    <p class="menu__line__price">
-                        35€
-                    </p>
-                    <div class="menu__line__validation">
-                        <i class="fa-sharp fa-solid fa-circle-check fa-lg menu__line__validation__icon"></i>
-                    </div>
-                </div>
-                <div class="menu__line menu__line--3">
-                    <article class="menu__line__txt">
-                        <h2 class="menu__line__txt__1">
-                            Velouté de cèpes
-                        </h2>
-                        <p class="menu__line__txt__2">
-                            Aux truffes
-                        </p>
-                    </article>
-                    <p class="menu__line__price">
-                        20€
-                    </p>
-                    <div class="menu__line__validation">
-                        <i class="fa-sharp fa-solid fa-circle-check fa-lg menu__line__validation__icon"></i>
-                    </div>
-                </div>
-            </section>
-            <section class="menu">
-                <h2 class="menu__titre">PLATS</h2>
-                <div class="menu__underline"></div>
-                <div class="menu__line menu__line--4">
-                    <article class="menu__line__txt">
-                        <h2 class="menu__line__txt__1">
-                            Poulet rôti aux herbes de provence
-                        </h2>
-                        <p class="menu__line__txt__2">
-                            Et sa crème de truffe
-                        </p>
-                    </article>
-                    <p class="menu__line__price">
-                        40€
-                    </p>
-                    <div class="menu__line__validation">
-                        <i class="fa-sharp fa-solid fa-circle-check fa-lg menu__line__validation__icon"></i>
-                    </div>
-                </div>
-                <div class="menu__line menu__line--5">
-                    <article class="menu__line__txt">
-                        <h2 class="menu__line__txt__1">
-                            Langouste rôtie
-                        </h2>
-                        <p class="menu__line__txt__2">
-                            Et ses légumes de saison
-                        </p>
-                    </article>
-                    <p class="menu__line__price">
-                        35€
-                    </p>
-                    <div class="menu__line__validation">
-                        <i class="fa-sharp fa-solid fa-circle-check fa-lg menu__line__validation__icon"></i>
-                    </div>
-                </div>
-                <div class="menu__line menu__line--6">
-                    <article class="menu__line__txt">
-                        <h2 class="menu__line__txt__1">
-                            Côte de boeuf angus
-                        </h2>
-                        <p class="menu__line__txt__2">
-                            Et sa purée de panais
-                        </p>
-                    </article>
-                    <p class="menu__line__price">
-                        44€
-                    </p>
-                    <div class="menu__line__validation">
-                        <i class="fa-sharp fa-solid fa-circle-check fa-lg menu__line__validation__icon"></i>
-                    </div>
-                </div>
-            </section>
-            <section class="menu">
-                <h2 class="menu__titre">DESSERTS</h2>
-                <div class="menu__underline"></div>
-                <div class="menu__line menu__line--7">
-                    <article class="menu__line__txt">
-                        <h2 class="menu__line__txt__1">
-                            Farandole de desserts
-                        </h2>
-                        <p class="menu__line__txt__2">
-                            Du chef
-                        </p>
-                    </article>
-                    <p class="menu__line__price">
-                        18€
-                    </p>
-                    <div class="menu__line__validation">
-                        <i class="fa-sharp fa-solid fa-circle-check fa-lg menu__line__validation__icon"></i>
-                    </div>
-                </div>
-                <div class="menu__line menu__line--8">
-                    <article class="menu__line__txt">
-                        <h2 class="menu__line__txt__1">
-                            Crème brulée
-                        </h2>
-                        <p class="menu__line__txt__2">
-                            Revisité
-                        </p>
-                    </article>
-                    <p class="menu__line__price">
-                        22€
-                    </p>
-                    <div class="menu__line__validation">
-                        <i class="fa-sharp fa-solid fa-circle-check fa-lg menu__line__validation__icon"></i>
-                    </div>
-                </div>
-                <div class="menu__line menu__line--9">
-                    <article class="menu__line__txt">
-                        <h2 class="menu__line__txt__1">
-                            Tiramisu
-                        </h2>
-                        <p class="menu__line__txt__2">
-                            À la noisette
-                        </p>
-                    </article>
-                    <p class="menu__line__price">
-                        23€
-                    </p>
-                    <div class="menu__line__validation">
-                        <i class="fa-sharp fa-solid fa-circle-check fa-lg menu__line__validation__icon"></i>
-                    </div>
-                </div>
-            </section>
-            <div class="bouton">
-                <button class="btn">Commander</button>
+        
+        <div class="container">
+            <div class="pagesimg">
+                <img class="pagesimg__img" src="../images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Le délice des sens">
             </div>
         </div>
 
-
+        <div class="container">
+            <div class="pagesmenu">
+                <section class="pagesmenu__titre">
+                    <h1>À la française</h1>
+                    <div class="container__heart">
+                        <div class="container__heart__1">
+                            <i class="fa-regular fa-heart fa-lg"></i>
+                        </div>
+                        <div class="container__heart__2">
+                            <i class="fa-solid fa-heart fa-lg"></i>
+                        </div>
+                    </div>
+                </section>
+                <section class="menu">
+                    <h2 class="menu__titre">ENTRÉES</h2>
+                    <div class="menu__line menu__line--1">
+                        <article class="menu__line__txt">
+                            <h2 class="menu__line__txt__1">
+                                Tartare de thon
+                            </h2>
+                            <p class="menu__line__txt__2">
+                                Assaisonné au yuzu
+                            </p>
+                        </article>
+                        <p class="menu__line__price">
+                            25€
+                        </p>
+                        <div class="menu__line__validation">
+                            <i class="fa-sharp fa-solid fa-circle-check fa-lg menu__line__validation__icon"></i>
+                        </div>
+                    </div>
+                    <div class="menu__line menu__line--2">
+                        <article class="menu__line__txt">
+                            <h2 class="menu__line__txt__1">
+                                Bouchée de homard croustillant
+                            </h2>
+                            <p class="menu__line__txt__2">
+                                Et sa farandole de petits légumes
+                            </p>
+                        </article>
+                        <p class="menu__line__price">
+                            35€
+                        </p>
+                        <div class="menu__line__validation">
+                            <i class="fa-sharp fa-solid fa-circle-check fa-lg menu__line__validation__icon"></i>
+                        </div>
+                    </div>
+                    <div class="menu__line menu__line--3">
+                        <article class="menu__line__txt">
+                            <h2 class="menu__line__txt__1">
+                                Velouté de cèpes
+                            </h2>
+                            <p class="menu__line__txt__2">
+                                Aux truffes
+                            </p>
+                        </article>
+                        <p class="menu__line__price">
+                            20€
+                        </p>
+                        <div class="menu__line__validation">
+                            <i class="fa-sharp fa-solid fa-circle-check fa-lg menu__line__validation__icon"></i>
+                        </div>
+                    </div>
+                </section>
+                <section class="menu">
+                    <h2 class="menu__titre">PLATS</h2>
+                    <div class="menu__line menu__line--4">
+                        <article class="menu__line__txt">
+                            <h2 class="menu__line__txt__1">
+                                Poulet rôti aux herbes de provence
+                            </h2>
+                            <p class="menu__line__txt__2">
+                                Et sa crème de truffe
+                            </p>
+                        </article>
+                        <p class="menu__line__price">
+                            40€
+                        </p>
+                        <div class="menu__line__validation">
+                            <i class="fa-sharp fa-solid fa-circle-check fa-lg menu__line__validation__icon"></i>
+                        </div>
+                    </div>
+                    <div class="menu__line menu__line--5">
+                        <article class="menu__line__txt">
+                            <h2 class="menu__line__txt__1">
+                                Langouste rôtie
+                            </h2>
+                            <p class="menu__line__txt__2">
+                                Et ses légumes de saison
+                            </p>
+                        </article>
+                        <p class="menu__line__price">
+                            35€
+                        </p>
+                        <div class="menu__line__validation">
+                            <i class="fa-sharp fa-solid fa-circle-check fa-lg menu__line__validation__icon"></i>
+                        </div>
+                    </div>
+                    <div class="menu__line menu__line--6">
+                        <article class="menu__line__txt">
+                            <h2 class="menu__line__txt__1">
+                                Côte de boeuf angus
+                            </h2>
+                            <p class="menu__line__txt__2">
+                                Et sa purée de panais
+                            </p>
+                        </article>
+                        <p class="menu__line__price">
+                            44€
+                        </p>
+                        <div class="menu__line__validation">
+                            <i class="fa-sharp fa-solid fa-circle-check fa-lg menu__line__validation__icon"></i>
+                        </div>
+                    </div>
+                </section>
+                <section class="menu">
+                    <h2 class="menu__titre">DESSERTS</h2>
+                    <div class="menu__line menu__line--7">
+                        <article class="menu__line__txt">
+                            <h2 class="menu__line__txt__1">
+                                Farandole de desserts
+                            </h2>
+                            <p class="menu__line__txt__2">
+                                Du chef
+                            </p>
+                        </article>
+                        <p class="menu__line__price">
+                            18€
+                        </p>
+                        <div class="menu__line__validation">
+                            <i class="fa-sharp fa-solid fa-circle-check fa-lg menu__line__validation__icon"></i>
+                        </div>
+                    </div>
+                    <div class="menu__line menu__line--8">
+                        <article class="menu__line__txt">
+                            <h2 class="menu__line__txt__1">
+                                Crème brulée
+                            </h2>
+                            <p class="menu__line__txt__2">
+                                Revisité
+                            </p>
+                        </article>
+                        <p class="menu__line__price">
+                            22€
+                        </p>
+                        <div class="menu__line__validation">
+                            <i class="fa-sharp fa-solid fa-circle-check fa-lg menu__line__validation__icon"></i>
+                        </div>
+                    </div>
+                    <div class="menu__line menu__line--9">
+                        <article class="menu__line__txt">
+                            <h2 class="menu__line__txt__1">
+                                Tiramisu
+                            </h2>
+                            <p class="menu__line__txt__2">
+                                À la noisette
+                            </p>
+                        </article>
+                        <p class="menu__line__price">
+                            23€
+                        </p>
+                        <div class="menu__line__validation">
+                            <i class="fa-sharp fa-solid fa-circle-check fa-lg menu__line__validation__icon"></i>
+                        </div>
+                    </div>
+                </section>
+                <div class="bouton">
+                    <button class="btn">Commander</button>
+                </div>
+            </div>
+        </div>
+        
         <footer class="footer">
             <div class="container">
                 <h2 class="footer__logo">
