--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="fr">
     <head>
-        <meta charset="utf-8" />
+        <meta charset="utf-8" >
         <meta name="viewport" content="width=device-width, initial-scale=1">
         
-        <link rel="stylesheet" href="CSS/normalize.css" />
-        <link rel="stylesheet" href="CSS/style.css" />
+        <link rel="stylesheet" href="CSS/normalize.css" >
+        <link rel="stylesheet" href="CSS/style.css" >
         
 
         <title>ohmyfood</title>
@@ -14,7 +14,7 @@
     <body class="body">
         <div class="body__blank">
             <div class="loading">
-                <img class="loading__icon" src="../images/loading/homme.png" alt="Homme">
+                <img class="loading__icon" src="images/loading/homme.png" alt="Homme">
                 <div class="loading__stacks">
                     <div class="loading__stacks__stack">
                         <div class="loading__stacks__stack__color loading__stacks__stack__color--1"></div>
@@ -36,7 +36,7 @@
                             <path class="loading__cloud__all__medium" d="M2071.7-1606.5c-189.7-51.4-274.7-90.9-428.9-191.7c-328.1-217.4-507.9-569.2-454.6-885.4c33.6-203.6,108.7-338,288.6-515.9c258.9-255,543.5-371.6,911.1-371.6s652.2,116.6,911.1,371.6c179.9,177.9,247.1,298.4,286.6,508c77.1,423-256.9,875.6-782.7,1055.4C2589.6-1563,2275.3-1551.2,2071.7-1606.5z M2650.8-2013.7c330.1-79.1,521.8-282.6,521.8-555.4c2-357.7-300.4-581.1-784.7-581.1s-786.6,223.3-784.7,581.1c0,140.3,33.6,233.2,122.5,336C1907.7-2025.5,2303-1932.6,2650.8-2013.7z"/>
                             <path class="loading__cloud__all__small" d="M668.5-3683.8c-223.3-73.1-421-280.7-454.6-474.4c-33.6-197.6,128.5-448.7,359.7-563.3c162.1-79.1,381.5-90.9,545.5-29.6c251,94.9,428.9,312.3,428.9,525.7c0,140.3-57.3,258.9-179.9,373.6C1168.5-3666,909.6-3602.7,668.5-3683.8z M1071.7-4100.8c87-55.4,75.1-201.6-17.8-249c-27.7-13.8-108.7-25.7-179.9-25.7c-168,0-235.2,43.5-235.2,158.1c0,79.1,25.7,110.7,112.7,138.3C826.6-4053.4,1016.3-4069.2,1071.7-4100.8z"/></g></g>
                         </svg>
-                    <img class="loading__cloud__logo" src="../images/logo/ohmyfood.png" alt="cloud">
+                    <img class="loading__cloud__logo" src="images/logo/ohmyfood.png" alt="cloud">
                 </div>
             </div>
         </div>
@@ -50,7 +50,7 @@
         <div class="localisation">
             <i class="fa-solid fa-location-dot fa-lg localisation__icon"></i>
             <form method="post" action="#">
-                <input type="search" name="localisation" id="Ville" placeholder="Paris, Belleville" />
+                <input type="search" name="localisation" id="Ville" placeholder="Paris, Belleville" >
             </form>
         </div>
 
