modification des blocs fonctionnement hover

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                         </div>
                         <p>Composez votre menu</p>
                     </div>
-                    <div class="fonction__block__line fonction__block__line--active">
+                    <div class="fonction__block__line">
                         <div class="fonction__block__line__position">
                             <div class="fonction__block__line__position__number">
                                 <p>3</p>
